*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.5 ===
* Implemented automatic scale of spectrum graph switch.

=== 1.0.4 ===
* Reduced the rate of the gain curve update.
* Updated build scripts and dependencies.

=== 1.0.3 ===
* Updated build scripts and dependencies.

=== 1.0.2 ===
* Updated build scripts and dependencies.

=== 1.0.1 ===
* Updated build scripts and dependencies.

=== 1.0.0 ===
* Initial release.
