@@ -64,7 +64,7 @@
 
 						<ui:for id="i" first="2" count="7">
 							<ui:eval id="hue" value="(:i-1) * 0.125"/>
-							<marker id="sf_${:i-1}" editable="true" visibility=":se_${:i-1}" color.hue="${hue}" hcolor.hue="${hue}" rborder="16" rcolor.hue="${hue}" hrborder="16" hrcolor.hue="${hue}" pointer="hsize"/>
+							<marker id="sf_${:i-1}" ui:id="split_marker_${:i-1}" editable="true" visibility=":se_${:i-1}" color.hue="${hue}" hcolor.hue="${hue}" rborder="16" rcolor.hue="${hue}" hrborder="16" hrcolor.hue="${hue}" pointer="hsize"/>
 							<marker id="fre_${i}" visibility=":se_${:i-1}" color.hue="${hue}" hcolor.hue="${hue}" lborder="16" lcolor.hue="${hue}" hlborder="16" hlcolor.hue="${hue}"/>
 						</ui:for>
 					</ui:with>
@@ -126,6 +126,12 @@
 							<text y="${g} db" text="${g}" visibility=":zoom le -15 db"/>
 						</ui:for>
 					</ui:with>
+
+					<ui:for id="i" first="1" last="8">
+						<ui:with ox="0" oy="2" y="1" valign="-1" color="graph_marker_cycle" visibility="false" pad.h="4" font.bold="true">
+							<text ui:id="split_note_${i}" x=":sf_${i}" halign="(:sf_${i} lt 500) ? 1 : -1" text.halign="(:sf_${i} lt 500) ? -1 : 1" color.hue="${(:i-1) * 0.125}"/>
+						</ui:with>
+					</ui:for>
 				</graph>
 			</group>
 			<!-- zoom -->
@@ -433,10 +439,10 @@
 					<!-- Freq Range -->
 					<ui:with bg.color="bg_schema" bg.bright="(!${act_band}) ? :const_bg_darken : 1.0" bright="(!${act_band}) ? 0.75 : 1.0">
 						<ui:if test=":i igt 1">
-							<vbox vfill="false">
+							<vbox vfill="false" height.min="40">
 								<value id="sf_${:i-1}" width.min="30" sline="true" detailed="false" visibility=":se_${:i-1}"/>
 								<value id="fre_${i}" width.min="30" sline="true" detailed="false" visibility=":se_${:i-1}"/>
-								<label text="labels.chan.off" visibility="not :se_${:i-1}" height.min="40"/>
+								<label text="labels.chan.off" visibility="not :se_${:i-1}"/>
 							</vbox>
 						</ui:if>
 
